# Network_Detector_Intrusion

./: .coverage  .gitignore  README.md  app.py  dashboard_app.py  packages.txt  pyproject.toml  requirements.txt
.streamlit/: config.toml
core/: auto_parser.py  preprocessor.py
network_intrusion_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pages/: Analysis_Summary.py  Anomaly_Detection.py  PCA_Analysis.py  Summary.py
parsers/: parse_pcap.py  parse_pcap_tshark_ipv6.py
tests/: test_load_background_image.py  test_process_uploaded_file.py
tools/: pcap_to_csv.py
