# pyproject.toml
[project]
name = "network-intrusion-dashboard"
version = "0.1.0"
description = "Dashboard for detecting and analyzing network intrusions via PCAP/CSV files"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.10"
dependencies = [
  "altair==5.5.0",
  "appdirs==1.4.4",
  "attrs==25.3.0",
  "blinker==1.9.0",
  "cachetools==5.5.2",
  "certifi==2025.8.3",
  "charset-normalizer==3.4.2",
  "click==8.2.1",
  "colorama==0.4.6",
  "contourpy==1.3.3",
  "cycler==0.12.1",
  "fonttools==4.59.0",
  "fpdf==1.7.2",
  "gitdb==4.0.12",
  "GitPython==3.1.45",
  "idna==3.10",
  "Jinja2==3.1.6",
  "joblib==1.5.1",
  "jsonschema==4.25.0",
  "jsonschema-specifications==2025.4.1",
  "kiwisolver==1.4.8",
  "lxml==6.0.0",
  "markdown-it-py==3.0.0",
  "MarkupSafe==3.0.2",
  "matplotlib==3.9.0",
  "mdurl==0.1.2",
  "narwhals==2.0.1",
  "numpy==1.26.4",
  "packaging==24.2",
  "pandas==2.2.2",
  "pillow==10.4.0",
  "plotly==6.2.0",
  "protobuf==4.25.8",
  "pyarrow==21.0.0",
  "pydeck==0.9.1",
  "Pygments==2.19.2",
  "pyparsing==3.2.3",
  "pyshark==0.6",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.2",
  "referencing==0.36.2",
  "requests==2.32.4",
  "rich==13.9.4",
  "rpds-py==0.26.0",
  "scikit-learn==1.5.0",
  "scipy==1.16.1",
  "seaborn==0.13.2",
  "six==1.17.0",
  "smmap==5.0.2",
  "streamlit==1.35.0",
  "tenacity==8.5.0",
  "termcolor==3.1.0",
  "threadpoolctl==3.6.0",
  "toml==0.10.2",
  "tornado==6.5.1",
  "tqdm==4.66.4",
  "typing_extensions==4.14.1",
  "tzdata==2025.2",
  "urllib3==2.5.0",
  "watchdog==6.0.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "pages*", "output*", "parsers*", "temp_uploaded*"]
